--- a/demo/index.html
+++ b/demo/index.html
@@ -42,7 +42,7 @@
 <script src="../src/jquery.remodal.js"></script>
 <script>
     $(document).on('open', '.remodal', function () {
-        var modal = $(this);
+        alert('open');
     });
 
     $(document).on('opened', '.remodal', function () {
