Change demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -56,11 +56,11 @@
     });
 
     $(document).on('confirm', '.remodal', function () {
-        alert('confirm');
+        console.log('confirm');
     });
 
     $(document).on('cancel', '.remodal', function () {
-        alert('cancel');
+        console.log('cancel');
     });
 </script>
 </body>
