--- a/demo/index.html
+++ b/demo/index.html
@@ -69,6 +69,9 @@
     $(document).on('cancel', '.remodal', function () {
         console.log('cancel');
     });
+
+    var inst = $.remodal.lookup[$('[data-remodal-id=modal]').data('remodal')];
+    inst.open();
 </script>
 </body>
 </html>
