--- a/demo/index.html
+++ b/demo/index.html
@@ -20,6 +20,71 @@
     <a href="#modal">Click</a>
     <br><br>
 
+    <h1>Remodal</h1>
+    <p>
+        Flat, responsive, lightweight, fast, easy customizable modal window plugin
+        with declarative state notation and hash tracking.
+    </p>
+    <p>
+        Minified version size: ~4kb
+    </p>
+    <br>
+
+    <h1>Remodal</h1>
+    <p>
+        Flat, responsive, lightweight, fast, easy customizable modal window plugin
+        with declarative state notation and hash tracking.
+    </p>
+    <p>
+        Minified version size: ~4kb
+    </p>
+    <br>
+    <h1>Remodal</h1>
+    <p>
+        Flat, responsive, lightweight, fast, easy customizable modal window plugin
+        with declarative state notation and hash tracking.
+    </p>
+    <p>
+        Minified version size: ~4kb
+    </p>
+    <br>
+    <h1>Remodal</h1>
+    <p>
+        Flat, responsive, lightweight, fast, easy customizable modal window plugin
+        with declarative state notation and hash tracking.
+    </p>
+    <p>
+        Minified version size: ~4kb
+    </p>
+    <br>
+    <h1>Remodal</h1>
+    <p>
+        Flat, responsive, lightweight, fast, easy customizable modal window plugin
+        with declarative state notation and hash tracking.
+    </p>
+    <p>
+        Minified version size: ~4kb
+    </p>
+    <br>
+    <h1>Remodal</h1>
+    <p>
+        Flat, responsive, lightweight, fast, easy customizable modal window plugin
+        with declarative state notation and hash tracking.
+    </p>
+    <p>
+        Minified version size: ~4kb
+    </p>
+    <br>
+    <h1>Remodal</h1>
+    <p>
+        Flat, responsive, lightweight, fast, easy customizable modal window plugin
+        with declarative state notation and hash tracking.
+    </p>
+    <p>
+        Minified version size: ~4kb
+    </p>
+    <br>
+
     <div class="remodal" data-remodal-id="modal">
         <h1>Remodal</h1>
         <p>
