--- a/demo/index.html
+++ b/demo/index.html
@@ -144,14 +144,16 @@
         console.log('cancel');
     });
 
-    // You can open or close it like this:
-    // var inst = $.remodal.lookup[$('[data-remodal-id=modal]').data('remodal')];
-    // inst.open();
-    // inst.close();
+//    You can open or close it like this:
+//    $(function () {
+//        // var inst = $.remodal.lookup[$('[data-remodal-id=modal]').data('remodal')];
+//        // inst.open();
+//        // inst.close();
+//    });
 
-    // Or init in this way:
+//  Or init in this way:
     var inst = $('[data-remodal-id=modal2]').remodal();
-    // inst.open();
+//  inst.open();
 </script>
 </body>
 </html>
