Update the example

--- a/demo/index.html
+++ b/demo/index.html
@@ -131,12 +131,12 @@
         console.log('cancel');
     });
 
-    //    You can open or close it like this:
-    //    $(function () {
-    //        // var inst = $.remodal.lookup[$('[data-remodal-id=modal]').data('remodal')];
-    //        // inst.open();
-    //        // inst.close();
-    //    });
+//    You can open or close it like this:
+//    $(function () {
+//        var inst = $.remodal.lookup[$('[data-remodal-id=modal]').data('remodal')];
+//        inst.open();
+//        inst.close();
+//    });
 
     //  Or init in this way:
     var inst = $('[data-remodal-id=modal2]').remodal();
