--- a/examples/index-zepto.html
+++ b/examples/index-zepto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Remodal example</title>
