--- a/examples/index-zepto.html
+++ b/examples/index-zepto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--[if IE 8]> <html class="lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <title>Remodal example</title>
