Improves styles customising
1. Removed font import and font-style from css. If some one doesn`t want to use Exo font, no need to load it.
2. Add attribute `data-remodal-action` to bind click events. Using class for event binding (for example `remodal-confirm`) makes difficult to customise buttons. Using action data attribute allows to use it with any class. Posible values: `confirm`, `cancel`, `close`
3. Remove auto creating close button. Close button can be created in declarative style using `data-remodal-action="close"`. Example: '<span data-remodal-action="close">Close</span>'
4. Removed font-size for input elements in remodal element: it can break sites input styles

**It has incompatible changes.**

--- a/examples/index.html
+++ b/examples/index.html
@@ -80,6 +80,7 @@
 </div>
 
 <div class="remodal" data-remodal-id="modal">
+    <span data-remodal-action="close" class="remodal-close"></span>
     <h1>Remodal</h1>
     <p>
         Flat, responsive, lightweight, fast, easy customizable modal window plugin
@@ -89,8 +90,8 @@
         Minified version size: ~4kb
     </p>
     <br>
-    <a class="remodal-cancel" href="#">Cancel</a>
-    <a class="remodal-confirm" href="#">OK</a>
+    <span data-remodal-action="cancel" class="remodal-cancel">Cancel</span>
+    <span data-remodal-action="confirm" class="remodal-confirm">OK</span>
 </div>
 
 <div data-remodal-id="modal2">
