--- a/examples/index-zepto.html
+++ b/examples/index-zepto.html
@@ -80,6 +80,7 @@
 </div>
 
 <div class="remodal" data-remodal-id="modal">
+    <button data-remodal-action="close" class="remodal-close"></button>
     <h1>Remodal</h1>
     <p>
         Flat, responsive, lightweight, fast, easy customizable modal window plugin
@@ -89,8 +90,8 @@
         Minified version size: ~4kb
     </p>
     <br>
-    <a class="remodal-cancel" href="#">Cancel</a>
-    <a class="remodal-confirm" href="#">OK</a>
+    <button data-remodal-action="cancel" class="remodal-cancel">Cancel</button>
+    <button data-remodal-action="confirm" class="remodal-confirm">OK</button>
 </div>
 
 <div data-remodal-id="modal2">
