--- a/examples/index.html
+++ b/examples/index.html
@@ -80,7 +80,7 @@
 </div>
 
 <div class="remodal" data-remodal-id="modal">
-    <span data-remodal-action="close" class="remodal-close"></span>
+    <button data-remodal-action="close" class="remodal-close"></button>
     <h1>Remodal</h1>
     <p>
         Flat, responsive, lightweight, fast, easy customizable modal window plugin
@@ -90,8 +90,8 @@
         Minified version size: ~4kb
     </p>
     <br>
-    <span data-remodal-action="cancel" class="remodal-cancel">Cancel</span>
-    <span data-remodal-action="confirm" class="remodal-confirm">OK</span>
+    <button data-remodal-action="cancel" class="remodal-cancel">Cancel</button>
+    <button data-remodal-action="confirm" class="remodal-confirm">OK</button>
 </div>
 
 <div data-remodal-id="modal2">
