Add global settings

--- a/examples/index-zepto.html
+++ b/examples/index-zepto.html
@@ -102,6 +102,20 @@
     <a class="remodal-confirm" href="#">Hello!</a>
 </div>
 
+<!-- You can define the global options -->
+<script>
+    // window.remodalGlobals = {
+    //     namespace: "remodal",
+    //     defaults: {
+    //         hashTracking: true,
+    //         closeOnConfirm: true,
+    //         closeOnCancel: true,
+    //         closeOnEscape: true,
+    //         closeOnAnyClick: true
+    //     }
+    // };
+</script>
+
 <script src="../libs/zepto/zepto.min.js"></script>
 <script src="../src/jquery.remodal.js"></script>
 
