--- a/examples/index.html
+++ b/examples/index.html
@@ -102,6 +102,20 @@
     <a class="remodal-confirm" href="#">Hello!</a>
 </div>
 
+<!-- You can define the global options -->
+<script>
+    // window.remodalGlobals = {
+    //     namespace: "remodal",
+    //     defaults: {
+    //         hashTracking: true,
+    //         closeOnConfirm: true,
+    //         closeOnCancel: true,
+    //         closeOnEscape: true,
+    //         closeOnAnyClick: true
+    //     }
+    // };
+</script>
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../libs/jquery/dist/jquery.min.js"><\/script>')</script>
 <script src="../src/jquery.remodal.js"></script>
