--- a/examples/index.html
+++ b/examples/index.html
@@ -80,6 +80,7 @@
 </div>
 
 <div class="remodal" data-remodal-id="modal">
+  <span data-remodal-action="close" class="remodal-close"></span>
   <h1>Remodal</h1>
   <p>
     Flat, responsive, lightweight, fast, easy customizable modal window plugin
@@ -89,8 +90,8 @@
     Minified version size: ~4kb
   </p>
   <br>
-  <a class="remodal-cancel" href="#">Cancel</a>
-  <a class="remodal-confirm" href="#">OK</a>
+  <a data-remodal-action="cancel" class="remodal-cancel" href="#">Cancel</a>
+  <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
 </div>
 
 <div data-remodal-id="modal2">
@@ -99,7 +100,7 @@
     Hello!
   </p>
   <br>
-  <a class="remodal-confirm" href="#">Hello!</a>
+  <a data-remodal-action="confirm" class="remodal-confirm" href="#">Hello!</a>
 </div>
 
 <!-- You can define the global options -->
