--- a/examples/index.html
+++ b/examples/index.html
@@ -105,9 +105,9 @@
 
 <!-- You can define the global options -->
 <script>
-  // window.remodalGlobals = {
-  //   namespace: "remodal",
-  //   defaults: {
+  // window.REMODAL_GLOBALS = {
+  //   NAMESPACE: "remodal",
+  //   DEFAULTS: {
   //     hashTracking: true,
   //     closeOnConfirm: true,
   //     closeOnCancel: true,
