:lipstick: refine examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -106,7 +106,7 @@
 <!-- You can define the global options -->
 <script>
   // window.REMODAL_GLOBALS = {
-  //   NAMESPACE: "remodal",
+  //   NAMESPACE: 'remodal',
   //   DEFAULTS: {
   //     hashTracking: true,
   //     closeOnConfirm: true,
@@ -123,39 +123,39 @@
 
 <!-- Events -->
 <script>
-  $(document).on("open", ".remodal", function () {
-    console.log("open");
+  $(document).on('open', '.remodal', function () {
+    console.log('open');
   });
 
-  $(document).on("opened", ".remodal", function () {
-    console.log("opened");
+  $(document).on('opened', '.remodal', function () {
+    console.log('opened');
   });
 
-  $(document).on("close", ".remodal", function (e) {
-    console.log('close' + (e.reason ? ", reason: " + e.reason : ''));
+  $(document).on('close', '.remodal', function (e) {
+    console.log('close' + (e.reason ? ', reason: ' + e.reason : ''));
   });
 
-  $(document).on("closed", ".remodal", function (e) {
+  $(document).on('closed', '.remodal', function (e) {
     console.log('closed' + (e.reason ? ', reason: ' + e.reason : ''));
   });
 
-  $(document).on("confirm", ".remodal", function () {
-    console.log("confirm");
+  $(document).on('confirm', '.remodal', function () {
+    console.log('confirm');
   });
 
-  $(document).on("cancel", ".remodal", function () {
-    console.log("cancel");
+  $(document).on('cancel', '.remodal', function () {
+    console.log('cancel');
   });
 
 //  You can open or close it like this:
 //  $(function () {
-//    var inst = $.remodal.lookup[$("[data-remodal-id=modal]"").data("remodal")];
+//    var inst = $.remodal.lookup[$('[data-remodal-id=modal]').data('remodal')];
 //    inst.open();
 //    inst.close();
 //  });
 
   //  Or init in this way:
-  var inst = $("[data-remodal-id=modal2]").remodal();
+  var inst = $('[data-remodal-id=modal2]').remodal();
   //  inst.open();
 </script>
 </body>
