--- a/examples/index-zepto.html
+++ b/examples/index-zepto.html
@@ -80,27 +80,31 @@
 </div>
 
 <div class="remodal" data-remodal-id="modal">
-  <span data-remodal-action="close" class="remodal-close"></span>
-  <h1>Remodal</h1>
-  <p>
-    Flat, responsive, lightweight, fast, easy customizable modal window plugin
-    with declarative state notation and hash tracking.
-  </p>
-  <p>
-    Minified version size: ~4kb
-  </p>
+  <button data-remodal-action="close" class="remodal-close"></button>
+  <div>
+    <h1>Remodal</h1>
+    <p>
+      Flat, responsive, lightweight, fast, easy customizable modal window plugin
+      with declarative state notation and hash tracking.
+    </p>
+    <p>
+      Minified version size: ~4kb
+    </p>
+  </div>
   <br>
-  <a data-remodal-action="cancel" class="remodal-cancel" href="#">Cancel</a>
-  <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+  <button href="#" data-remodal-action="cancel" class="remodal-cancel">Cancel</button>
+  <button data-remodal-action="confirm" class="remodal-confirm">OK</button>
 </div>
 
 <div data-remodal-id="modal2">
-  <h1>Another one window</h1>
-  <p>
-    Hello!
-  </p>
+  <div>
+    <h1>Another one window</h1>
+    <p>
+      Hello!
+    </p>
+  </div>
   <br>
-  <a data-remodal-action="confirm" class="remodal-confirm" href="#">Hello!</a>
+  <button data-remodal-action="confirm" class="remodal-confirm">Hello!</button>
 </div>
 
 <!-- You can define the global options -->
