Add grunt watch

--- a/examples/index-zepto.html
+++ b/examples/index-zepto.html
@@ -6,7 +6,7 @@
   <title>Remodal example</title>
   <meta name="description" content="Remodal example">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../src/jquery.remodal.css">
+  <link rel="stylesheet" href="../dist/jquery.remodal.css">
 </head>
 <body>
 <div class="remodal-bg">
@@ -118,7 +118,7 @@
 </script>
 
 <script src="../libs/zepto/zepto.min.js"></script>
-<script src="../src/jquery.remodal.js"></script>
+<script src="../dist/jquery.remodal.js"></script>
 
 <!-- Events -->
 <script>
