--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,7 @@
   <title>Remodal example</title>
   <meta name="description" content="Remodal example">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../src/jquery.remodal.css">
+  <link rel="stylesheet" href="../dist/jquery.remodal.css">
 </head>
 <body>
 <div class="remodal-bg">
@@ -119,7 +119,7 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../libs/jquery/dist/jquery.min.js"><\/script>')</script>
-<script src="../src/jquery.remodal.js"></script>
+<script src="../dist/jquery.remodal.js"></script>
 
 <!-- Events -->
 <script>
