Add test for the 'modifier' option

--- a/test/remodal.html
+++ b/test/remodal.html
@@ -28,9 +28,11 @@
 </head>
 <body>
 
-<div id="qunit"></div>
+<div class="remodal-bg">
+  <div id="qunit"></div>
+  <a href="#" data-remodal-target="modal">Call</a>
+</div>
 
-<a href="#" data-remodal-target="modal">Call</a>
 <div class="remodal" data-remodal-id="modal">
   <a data-remodal-action="close" class="remodal-close"></a>
 
@@ -38,7 +40,9 @@
   <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
 </div>
 
-<div class="remodal" data-remodal-id="modal2" data-remodal-options="hashTracking: false,closeOnConfirm:false,closeOnCancel:   false">
+<div class="remodal" data-remodal-id="modal2"
+  data-remodal-options="hashTracking: false,closeOnConfirm:false,closeOnCancel:   false, modifier : with-test-class1 with-test-class2">
+
   <a data-remodal-action="close" class="remodal-close"></a>
   <a data-remodal-action="cancel" class="remodal-cancel" href="#">Cancel</a>
   <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
