Make tests refactoring

--- a/test/remodal.html
+++ b/test/remodal.html
@@ -41,7 +41,9 @@
 </div>
 
 <div class="remodal" data-remodal-id="modal2"
-  data-remodal-options="hashTracking: false,closeOnConfirm:false,closeOnCancel:   false, modifier : with-test-class1 with-test-class2">
+  data-remodal-options="hashTracking: false,
+    closeOnConfirm:false,closeOnCancel:  false, closeOnEscape: false , closeOnAnyClick: false,
+    modifier : with-test-class1 with-test-class2">
 
   <a data-remodal-action="close" class="remodal-close"></a>
   <a data-remodal-action="cancel" class="remodal-cancel" href="#">Cancel</a>
